@@ -1,9 +1,9 @@
 package com.lapissea.dfs.objects.collections;
 
 import com.lapissea.dfs.Utils;
-import com.lapissea.dfs.chunk.DataProvider;
+import com.lapissea.dfs.core.DataProvider;
+import com.lapissea.dfs.core.chunk.Chunk;
 import com.lapissea.dfs.io.IOTransaction;
-import com.lapissea.dfs.objects.Reference;
 import com.lapissea.dfs.type.IOInstance;
 import com.lapissea.dfs.type.IOType;
 import com.lapissea.dfs.type.NewObj;
@@ -29,7 +29,7 @@ import java.util.TreeSet;
 import static com.lapissea.dfs.config.GlobalConfig.DEBUG_VALIDATION;
 import static com.lapissea.dfs.type.field.annotations.IONullability.Mode.NULLABLE;
 
-public final class IOTreeSet<T extends Comparable<T>> extends AbstractUnmanagedIOSet<T>{
+public final class IOTreeSet<T extends Comparable<T>> extends UnmanagedIOSet<T>{
 	
 	private interface Node extends IOInstance.Def<Node>{
 		
@@ -139,8 +139,8 @@ public final class IOTreeSet<T extends Comparable<T>> extends AbstractUnmanagedI
 		RawCheck.of(Comparable.class::isAssignableFrom, "is not Comparable").arg()
 	);
 	
-	public IOTreeSet(DataProvider provider, Reference reference, IOType typeDef) throws IOException{
-		super(provider, reference, ((IOType.RawAndArg)typeDef).withDefaultArgs(IOType.of(Object.class)));
+	public IOTreeSet(DataProvider provider, Chunk identity, IOType typeDef) throws IOException{
+		super(provider, identity, ((IOType.RawAndArg)typeDef).withDefaultArgs(IOType.of(Object.class)));
 		
 		if(isSelfDataEmpty()){
 			allocateNulls();
@@ -462,7 +462,7 @@ public final class IOTreeSet<T extends Comparable<T>> extends AbstractUnmanagedI
 			IOFieldTools.requireFieldsEquals(cached, read, "Cache desync");
 		}
 		
-		var root = nodes.get(0);
+		var root = nodes.getFirst();
 		if(!root.hasValue()){
 			throw new IllegalStateException("Root has no value!");
 		}
